refactor: move Item, Inventory, Player to separate files

--- a/LearningProjects/RPGSystem/RPGSystem.csproj
+++ b/LearningProjects/RPGSystem/RPGSystem.csproj
@@ -43,6 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BattleService.cs" />
+    <Compile Include="ICarryingEntity.cs" />
+    <Compile Include="IDamageable.cs" />
+    <Compile Include="Inventory.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="ItemType.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
