--- a/LearningProjects/RPGSystem/RPGSystem.csproj
+++ b/LearningProjects/RPGSystem/RPGSystem.csproj
@@ -43,13 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BattleService.cs" />
-    <Compile Include="ICarryingEntity.cs" />
-    <Compile Include="IDamageable.cs" />
-    <Compile Include="Inventory.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Core\BattleService.cs" />
+    <Compile Include="Core\Program.cs" />
+    <Compile Include="Interfaces\ICarryingEntity.cs" />
+    <Compile Include="Interfaces\IDamageable.cs" />
+    <Compile Include="Models\Enemy.cs" />
+    <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
